--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,12 +7,16 @@
     <title>Actively Distanced</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css">
+    <link rel="stylesheet" href="../css/home.css" type="text/css" >
+    <link rel="stylesheet" href="../css/common.css" type="text/css" >
+    
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-default">
-            <a class="navbar-brand" href="/">Actively Distanced</a>
+            <a class="navbar-brand" href="/"> <h3>Actively Distanced</h3></a>
         </nav>
     </header>
 
@@ -20,41 +24,37 @@
     <!-- Navbar Section -->
     <section class="nav-sec" id="navi-bar">
         <div class="d-flex justify-content-between">
-            <div class="p-2 nav-icon-lg mint-green">
+            <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/"><em class="fa fa-home"></em>
-                    <span> 🏠 </span>
-                    <h3>Home</h3>
+                    <h4>Home</h4>
                 </a>
             </div>
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
-                    <span> + </span>
-                    <h3>Add an activity</h3>
+                    <h4>Add an activity</h4>
                 </a>
             </div>
-            <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/myactivity"><i class="fa fa-heart"></i>
-                    <span> 💚 </span>
-                    <h3>My activities</h3>
+            <div class="p-2 nav-icon-lg">
+                <a class="nav-icon" href="/dashboard"><i class="fa fa-heart"></i>
+                    <h4>My activities</h4>
                 </a>
             </div>
-            <div class="p-2 nav-icon-lg dark-black">
+            <div class="p-2 nav-icon-lg ">
                 <a class="nav-icon" href="/login"><i class="fa fa-minus"></i>
-                    <span> ⚪️ </span>
-                    <h3>Login</h3>
+                    <h4>Login</h4>
                 </a>
             </div>
         </div>
     </section>
 
-    <div class="wrapper">
+    <div class="wrapper newsfeed">
 
         <main>
             {{{ body }}}
         </main>
         <footer>
             <center>
-                <h4 class="ui teal image header">Have fun with safe activities! </h4>
+               <br> <h4 class="ui teal image header">Have fun with safe activities! </h4>
             </center>
         </footer>
     </div>
