--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,62 +1,26 @@
-{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <div class="ui segment">
+
+     <section class="login">
+      <div class="container">
+       <div class="banner-content">
+	   
+      <form class=" ui large form login-form"> <br>
+		   <h3 class="form-signin-heading ui teal image header" >Login to your account</h3><br>
+		   <div class="form-group">
+          <label for="username-login"> Username:</label>
+		      <input type="text" id="username-login"type="text" class="form-control" placeholder="Username" />
+		   </div>
+		   <div class="form-group">
+          <label for="password-login"><h3>Password:</h3></label>
+		      <input type="password" class="form-control" id="password-login" placeholder="Password" />
+		   </div>
+		   <button class="kafe-btn mint-blue btn-block" type="submit"><h3> Sign in </h3></button>
+		   <br/>
+		   <a class="btn" href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
+		  </form>
+
+       </div>
       </div>
-    </h2>
-  </div>
+    </section>
 
-  <div class="container">
-    <div class="column">
-      <div class="ui segment">
-        <div class="ui middle aligned center aligned grid">
-          <div class="column">
-
-            <h2 class="ui teal image header">
-              <div class="content-1">
-                Log-in to your account
-              </div>
-            </h2>
-
-            <form class="ui large form login-form">
-              <div class="ui stacked segment">
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="username-login">Username:</label>
-                    <input type="text" name="username" placeholder="Username">
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="password-login">Password:</label>
-                    <input type="password" name="password" placeholder="Password">
-                  </div>
-                </div>
-                <button class="button">Login</button>
-              </div>
-              <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
-                sign-up!</a>
-            </form>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> --}}
-
-<form class="login-form">
-  <div>
-    <label for="username-login">username:</label>
-    <input type="text" id="username-login" />
-  </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
 
 <script src="/javascript/login.js"></script>
