--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,44 +1,23 @@
-{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <div class="ui segment">
-        <img src="assets/images/Login-view2.png" class="style=width:360px; height:500px;" />
-
+     <section class="login">
+      <div class="container">
+       <div class="banner-content">
+	   
+      <form class=" ui large form signup-form"> <br>
+		   <h3 class="form-signin-heading ui teal image header" >Register your account</h3><br>
+		   <div class="form-group">
+          <label for="username-login"> Username:</label>
+		      <input type="text" id="username-signup"type="text" class="form-control" placeholder="Username" />
+		   </div>
+		   <div class="form-group">
+          <label for="password-signup"><h3>Password:</h3></label>
+		      <input type="password" class="form-control" id="password-signup" placeholder="Password" />
+		   </div>
+		   <button class="kafe-btn mint-blue btn-block" type="submit"><h3> Sign up </h3></button>
+		   <br/>
+		   <a class="btn" href="/login" role="button">Already have an account? Click here.</a>
+		  </form>
+       </div>
       </div>
-    </h2>
-  </div> --}}
-
-  <div class="container">
-  </div>
-  <!-- signup  -->
-  <div class="column">
-    <div class="ui segment">
-
-      <div class="ui middle aligned center aligned grid">
-        <div class="column">
-          <h2 class="ui teal image header">
-            <!-- <img src="assets/images/logo.png" class="image"> -->
-            <div class="content-1">
-              Sign-Up for an account
-            </div>
-          </h2>
-          <form class="signup-form">
-            <div>
-              <label for="username-signup">username:</label>
-              <input type="text" id="username-signup" />
-            </div>
-            <div>
-              <label for="password-signup">password:</label>
-              <input type="password" id="password-signup" />
-            </div>
-            <div>
-              <button type="submit">signup</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+    </section>
 
 <script src="/javascript/sign-up.js"></script>
