--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -42,7 +42,7 @@
 <div class="trending-box hidden-xs hidden-md">
     <div class="row">
         <div class="col-lg-12">
-            <a href="photo_stories.html">
+            <a href="outdoor">
                 <h4>Ourdoor Actvities</h4>
             </a>
         </div>
@@ -52,7 +52,7 @@
 <div class="trending-box hidden-xs hidden-md">
     <div class="row">
         <div class="col-lg-12">
-            <a href="photo_stories.html">
+            <a href="/virtual">
                 <h4>Virtual Actvities</h4>
             </a>
         </div>
