center the post box

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
 
     {{#each posts as |post|}}
         {{!-- {{> post-info post }} --}}
-
+<center>
         <div class="homecardbox">
             <div class="cardbox-heading">
                 <div class="media m-0">
@@ -131,6 +131,7 @@
       
     </div>
   </div>
+</center>
  
 <script>
 $(document).ready(function(){
