added my activies and associated a user to a post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="p-2 nav-icon-lg dark-black">
-                <a class="nav-icon" href="/myactivity"><i class="fa fa-heart"></i>
+                <a class="nav-icon" href="/my-activities"><i class="fa fa-heart"></i>
                     <span> 💚 </span>
                     <h3>My activities</h3>
                 </a>
