--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -58,6 +58,8 @@
   <div>
     <button type="submit">login</button>
   </div>
+  <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
+    sign-up!</a>
 </form>
 
 <script src="/javascript/login.js"></script>
