--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,26 +1,28 @@
+<section class="login">
+	<div class="container">
+		<div class="banner-content">
 
-     <section class="login">
-      <div class="container">
-       <div class="banner-content">
-	   
-      <form class=" ui large form login-form"> <br>
-		   <h3 class="form-signin-heading ui teal image header" >Login to your account</h3><br>
-		   <div class="form-group">
-          <label for="username-login"> Username:</label>
-		      <input type="text" id="username-login"type="text" class="form-control" placeholder="Username" />
-		   </div>
-		   <div class="form-group">
-          <label for="password-login"><h3>Password:</h3></label>
-		      <input type="password" class="form-control" id="password-login" placeholder="Password" />
-		   </div>
-		   <button class="kafe-btn mint-blue btn-block" type="submit"><h3> Sign in </h3></button>
-		   <br/>
-		   <a class="btn" href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
-		  </form>
+			<form class="login-form"><br>
+				<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
+				<div class="form-group">
+					<label for="username-login"> Username:</label>
+					<input type="text" id="username-login" type="text" class="form-control" placeholder="Username" />
+				</div>
+				<div class="form-group">
+					<label for="password-login">
+						<h3>Password:</h3>
+					</label>
+					<input type="password" class="form-control" id="password-login" placeholder="Password" />
+				</div>
+				<button class="kafe-btn mint-blue btn-block" type="submit">
+					<h3> Sign in </h3>
+				</button>
+				<br />
+				<a class="btn" href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
+			</form>
 
-       </div>
-      </div>
-    </section>
-
+		</div>
+	</div>
+</section>
 
 <script src="/javascript/login.js"></script>
