--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -2,7 +2,7 @@
       <div class="container">
        <div class="banner-content">
 	   
-      <form class=" ui large form signup-form"> <br>
+      <form class="signup-form"> <br>
 		   <h3 class="form-signin-heading ui teal image header" >Register your account</h3><br>
 		   <div class="form-group">
           <label for="username-login"> Username:</label>
