--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            {{!-- <div class="cardbox-like">
+            <div class="cardbox-like">
                 <ul>
                     <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} likes 786,286</span></li>
                     <li><a href="#myModal" data-toggle="modal" title="" class="com">
@@ -33,7 +33,7 @@
                             </i></a>
                     </li>
                 </ul>
-            </div> --}}
+            </div>
             <form class="comment-form">
                 <div>
                     <textarea name="comment-body"></textarea>
@@ -69,9 +69,6 @@
     </div>
 </div>
 
-
-
-
 <div class="container">
 
     <!-- Trigger the modal with a button -->
@@ -87,7 +84,6 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
-
                         <div class="row">
                             <div class="modal-body">
                                 <div class="col-md-8 modal-image">
@@ -119,7 +115,8 @@
                                         </ul>
                                         <div class="modal-meta-bottom">
                                             <ul>
-                                                <li><a class="modal-like" href="#"><i class="fa fa-heart"></i></a><span
+                                                <li>
+                                                    <a class="modal-like" href="#"><i class="fa fa-heart"></i></a><span
                                                         class="modal-one"> {{likes}}</span> |
                                                     <a class="modal-comment" href="#"><i
                                                             class="fa fa-comments"></i></a><span>
@@ -134,7 +131,6 @@
                                                         </h5>
                                                     </div>
                                                 </div>
-
                                                 </li>
                                             </ul>
                                         </div>
@@ -149,7 +145,7 @@
     </div>
 </div>
 
-{{!-- <script>
+<script>
     $(document).ready(function () {
         $("#myBtn").click(function () {
             $("#myModal").modal({ keyboard: true });
@@ -158,6 +154,7 @@
             $("#myModal2").modal({ keyboard: false });
         });
     });
-</script> --}}
+</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
