--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,6 +24,15 @@
                         </div>
                     </div>
                 </div>
+                            <form class="comment-form">
+                <div>
+                    <textarea name="comment-body"></textarea>
+                </div>
+                <div>
+                    <button type="submit">add comment</button>
+                    {{!-- <button type="button" class="upvote-btn">upvote</button> --}}
+                </div>
+            </form>
                 <div class="cardbox-like">
                     <ul>
                         <li><a href="#myModal" data-toggle="modal" title="" class="com">
@@ -33,6 +42,15 @@
                         <li><a href="#myModal" data-toggle="modal" title="" class="com">
                                 <span class="span-last"> {{comments}} comments 130,15</span>
                                 <i class="fa fa-comments"></i>
+                                            <form class="comment-form">
+                <div>
+                    <textarea name="comment-body"></textarea>
+                </div>
+                <div>
+                    <button type="submit">add comment</button>
+                    {{!-- <button type="button" class="upvote-btn">upvote</button> --}}
+                </div>
+            </form>
                         </li></a>
                     </ul>
                 </div>
@@ -46,15 +64,12 @@
                         </a>
                     </div>
 
-<<<<<<< HEAD
-=======
         <div class="trending-box hidden-xs hidden-md">
             <div class="row">
                 <div class="col-lg-12">
                     <a href="photo_stories.html">
                         <h4>Outdoor Actvities</h4>
                     </a>
->>>>>>> develop
                 </div>
             </div>
             <div class="trending-box hidden-xs hidden-md">
