modal ui in progress

--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -6,13 +6,13 @@
       <form action="/profile" method="post" enctype="multipart/form-data" class="ui large form">
         <div class="ui stacked segment">
           <h4 class="ui teal image header"><label for="title">Title</label></h4><br>
-          <input type="text" id="title" name="title" placeholder="Name your activity for people to join..." /><br>
+          <input type="text" id="title-bar" name="title" placeholder="Name your activity for people to join..." /><br>
 
           <h4 class="ui teal image header"><label for="description">Description</label></h4><br>
-          <input type="text" id="description" name="description" placeholder="Describe your event" /><br>
+          <input type="text" id="description-bar" name="description" placeholder="Describe your event..." /><br>
 
           <h4 class="ui teal image header"><label for="time">Upload a photo</label></h4><br>
-          <input type="file" name="photo" /><br>
+          <input type="file" id="description-bar" name="photo" /><br>
 
           <h4 class="ui teal image header"><label for="date">Choose a date for your event:</label></h4>
           <input type="date" id="date" name="date"><br>
@@ -21,7 +21,7 @@
           <input type="time" id="time" name="time" min="08:00" max="20:00" required><br>
 
           <h4 class="ui teal image header"><label for="description">Location or Link (virtual activity)</label></h4><br>
-          <input type="text" id="description" name="description" placeholder="Add an address for the event or URL for the virtual meetup" /><br>
+          <input type="text" id="description-bar" name="description" placeholder="Add an address for the event or URL for the virtual meetup" /><br>
           
           <h4 class="ui teal image header"><label for="quantity">Group Size</label></h4><br>
           <input type="number" id="quantity" name="quantity" placeholder="How many people can join your activity?" /><br><br>
