--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,26 +5,27 @@
         {{!-- {{> post-info post }} --}}
         <div class="cardbox">
             <div class="cardbox-heading">
-                <div class="media m-0">
-                    <div class="media-body">
-                        <div>
-                            <h3 class="ui teal image header">{{user_id}}</h3>
-                            </p>
-                            <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
-                            <h4 class="ui black image header">{{dataValues.description}}</h4><br>
-                            <h4 class="ui teal image header">{{dataValues.date}}</h4><br>
-                            <h4 class="ui teal image header">{{dataValues.time}}</h4><br>
-                            <div class="cardbox-item">
-                                <a href="#myModal" data-toggle="modal">
-                                    <img class="img-responsive media" src="{{dataValues.image_url}}">
-                                </a>
-                            </div>
-                            <h4 class="ui teal image header">By: {{dataValues.user.dataValues.username}}</h4><br>
+                <div class="media-profile m-0">
+                    {{!-- <div class="media-profile m-0"> --}}
+                    <div class="d-flex mr-3">
+                        <span class="emoji">🐼 </span>
+                        <div class="media-body">
+                            <p class="m-0">{{dataValues.user.dataValues.username}}</p>
+                            <small><span>{{dataValues.date}} | {{dataValues.time}}</span></small>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="cardbox-like">
+            <div class="body-container">
+                <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
+                <h4 class="ui black image header">{{dataValues.description}}</h4><br>
+                <div class="cardbox-item">
+                    <a href="#myModal" data-toggle="modal">
+                        <img class="img-responsive media" src="{{dataValues.image_url}}">
+                    </a>
+                </div>
+            </div>
+            {{!-- <div class="cardbox-like">
                 <ul>
                     <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} likes 786,286</span></li>
                     <li><a href="#myModal" data-toggle="modal" title="" class="com">
@@ -33,19 +34,17 @@
                             </i></a>
                     </li>
                 </ul>
-            </div>
-            <form class="comment-form">
-                <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
-                <div>
-                    
-                    <textarea name="comment-body"></textarea>
-                </div>
+            </div> --}}
 
-                <div>
-                    <button type="submit">add comment</button>
-                    {{!-- <button type="button" class="upvote-btn">upvote</button> --}}
-                </div>
-            </form>
+        <br><form class="comment-form">
+        <h4 class="ui teal image header"><label for="description">Comments</label></h4><br>
+        <span class="span-last">{{> comments post.comments}}</span>
+        	<div class="comment-body">
+                <textarea id="comment" class="comment-area" placeholder="Name your activity for people to join...">
+                </textarea>
+                    <button type="submit" class="ui fluid large teal submit button">add comment</button>
+            </div>
+        </form>
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
                     <h4 class="modal-title">{{dataValues.title}}</h4>
@@ -60,22 +59,33 @@
                                         </div>
                                         <div class="col-md-4 modal-meta">
                                             <div class="modal-meta-top">
-                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-hidden="true">
                                                     <span aria-hidden="true">×</span><span class="sr-only">Close</span>
                                                 </button>
                                                 <div class="img-poster clearfix">
-                                                    <h3 class="ui teal image header">{{user_id}} </h3><br>
+                                                    <div class="cardbox-heading">
+                <div class="media-profile m-0">
+                    {{!-- <div class="media-profile m-0"> --}}
+                    <div class="d-flex mr-3">
+                        <span class="emoji">🐼 </span>
+                        <div class="media-body">
+                            <p class="m-0">{{dataValues.user.dataValues.username}}</p>
+                            <small><span>{{dataValues.date}} | {{dataValues.time}}</span></small>
+                        </div>
+                    </div>
+                </div>
+            </div>
                                                     <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
-                                                    <h4 class="ui black image header">{{dataValues.description}}</h4><br>
-                                                    <h4 class="ui teal image header">{{dataValues.date}}</h4><br>
-                                                    <h4 class="ui teal image header">{{dataValues.time}}</h4><br>
-                                                    <h3 class="ui teal image header">{{dataValues.date}}</h3><br>
+                                                    <h4 class="ui black image header">{{dataValues.description}}</h4>
+                                                    <br>
                                                 </div>
                                                 <ul class="img-comment-list">
                                                     <li>
                                                         <div class="comment-text">
                                                             <a href=" {{routes}}">
-                                                                <h4 class="ui teal image header"> user_id {{user_id}} </h4>
+                                                                <h4 class="ui teal image header">{{dataValues.user.dataValues.username}}
+                                                                </h4>
                                                             </a>
                                                             <p>{{comment_text}} placeholder comments...</p>
                                                             <div class="date sub-text">{{dataValues.title}}</div>
@@ -85,8 +95,9 @@
                                                 <div class="modal-meta-bottom">
                                                     <ul>
                                                         <li>
-                                                            <a class="modal-like" href="#"><i class="fa fa-heart"></i></a><span
-                                                                class="modal-one"> {{likes}}</span> |
+                                                            <a class="modal-like" href="#"><i
+                                                                    class="fa fa-heart"></i></a><span class="modal-one">
+                                                                {{likes}}</span> |
                                                             <a class="modal-comment" href="#"><i
                                                                     class="fa fa-comments"></i></a><span>
                                                                 {{comments}}</span> </li>
@@ -111,30 +122,31 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        {{/each}}
-
-        <div class="trending-box hidden-xs hidden-md">
-            <div class="row">
-                <div class="col-lg-12">
-                    <a href="photo_stories.html">
-                        <h4>Outdoor Actvities</h4>
-                    </a>
-                </div>
-
-            </div>
-        </div>
-        <div class="trending-box hidden-xs hidden-md">
-            <div class="row">
-                <div class="col-lg-12">
-                    <a href="photo_stories.html">
-                        <h4>Virtual Actvities</h4>
-                    </a>
-                </div>
+                {{/each}}
             </div>
         </div>
     </div>
+
+    {{!-- <div class="trending-box hidden-xs hidden-md">
+        <div class="row">
+            <div class="col-lg-12">
+                <a href="photo_stories.html">
+                    <h4>Outdoor Actvities</h4>
+                </a>
+            </div>
+
+        </div>
+    </div>
+    <div class="trending-box hidden-xs hidden-md">
+        <div class="row">
+            <div class="col-lg-12">
+                <a href="photo_stories.html">
+                    <h4>Virtual Actvities</h4>
+                </a>
+            </div>
+        </div>
+    </div> --}}
+</div>
 </div>
 
 <div class="container">
@@ -145,7 +157,8 @@
     </a>
 
     <!-- Modal -->
-    
+
+</div>
 </div>
 
 <script>
