--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,56 +1,3 @@
- 
-{{!-- <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <div class="ui segment">
-      </div>
-    </h2>
-  </div>
-  
-  <div class="container">
-    <div class="column">
-      <div class="ui segment">
-        <div class="ui middle aligned center aligned grid">
-          <div class="column">
-  
-            <h2 class="ui teal image header">
-              <div class="content-1">
-                Log-in to your account
-              </div>
-            </h2>
-  
-            <form class="ui large form login-form">
-              <div class="ui stacked segment">
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="username-login">Username:</label>
-                    <input type="text" id="username-login" placeholder="Username" />
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <label for="password-login">Password:</label>
-                    <input type="password" id="password-login" placeholder="Password" />
-                  </div>
-                </div>
-                <button type="submit" class="button">Login</button>
-              </div>
-              <a class="btn btn-dark " href="/sign-up" role="button">New to Actively Distanced? Click here to
-                sign-up!</a>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
- </div> --}}
-  
-  
-  
- * {
-  box-sizing: border-box;
- }
-  
  /*!
  * # Semantic UI 2.4.2 - Site
  * http://github.com/semantic-org/semantic-ui/
@@ -65,12 +12,14 @@
  /*******************************
            Page
  *******************************/
-  
+
  .postbox{
   margin: auto;
-  margin-top: 5px;
-  width: 98%;
-  padding: 20px;
+  width: 80%;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  margin-bottom: 20px;
  }
   
  @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin');
@@ -691,7 +640,11 @@
  *
  */
  .ui.container{display:block;max-width:100%!important}@media only screen and (max-width:767px){.ui.container{width:auto!important;margin-left:1em!important;margin-right:1em!important}.ui.grid.container{width:auto!important}.ui.relaxed.grid.container{width:auto!important}.ui.very.relaxed.grid.container{width:auto!important}}@media only screen and (min-width:768px) and (max-width:991px){.ui.container{width:723px;margin-left:auto!important;margin-right:auto!important}.ui.grid.container{width:calc(723px + 2rem)!important}.ui.relaxed.grid.container{width:calc(723px + 3rem)!important}.ui.very.relaxed.grid.container{width:calc(723px + 5rem)!important}}@media only screen and (min-width:992px) and (max-width:1199px){.ui.container{width:933px;margin-left:auto!important;margin-right:auto!important}.ui.grid.container{width:calc(933px + 2rem)!important}.ui.relaxed.grid.container{width:calc(933px + 3rem)!important}.ui.very.relaxed.grid.container{width:calc(933px + 5rem)!important}}@media only screen and (min-width:1200px){.ui.container{width:1127px;margin-left:auto!important;margin-right:auto!important}.ui.grid.container{width:calc(1127px + 2rem)!important}.ui.relaxed.grid.container{width:calc(1127px + 3rem)!important}.ui.very.relaxed.grid.container{width:calc(1127px + 5rem)!important}}.ui.text.container{font-family:Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;max-width:700px!important;line-height:1.5}.ui.text.container{font-size:1.14285714rem}.ui.fluid.container{width:100%}.ui[class*="left aligned"].container{text-align:left}.ui[class*="center aligned"].container{text-align:center}.ui[class*="right aligned"].container{text-align:right}.ui.justified.container{text-align:justify;-webkit-hyphens:auto;-ms-hyphens:auto;hyphens:auto}
-  
+
+ .body-container {
+   padding: 0px 20px 0px 20px;
+ }
+
  /* Grid */
   
  /*******************************
@@ -773,7 +726,6 @@
  display: inline-block;
  vertical-align: top;
  }
-  
   
  /*!
  * # Semantic UI 2.4.2 - Divider
@@ -1449,7 +1401,7 @@
   
  @media(max-width:768px) {
   .nav-sec {
-    height: 100px;
+    height: 150px;
   }
   .fh {
     height: 150% !important;
@@ -1473,7 +1425,7 @@
    ========================================================================== */ 
  .newsfeed {
   background: #f4f4f4; 
-  padding: 40px 0px;
+  padding: 0px 0px;
  }  
  .homecardbox {
   border-radius: 20px;
@@ -1514,29 +1466,40 @@
   font-weight: 400;
   font-family: 'Abhaya Libre', serif;
   font-size: 14px !important;
-  color: #848484;
+  color: #B9D6E0;
   text-align: inherit;
   white-space: nowrap;
   background: 0 0;
   border: 0;
  }
   
+ span.emoji {
+  font-size: 30px;
+  vertical-align: middle;
+  line-height: 2;
+}
+
  .m-0 {
     margin: 0 !important;
  }
- .media {
+ .media-profile {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: start;
   align-items: flex-start;
  }
- .d-flex {
-  display: -ms-flexbox !important;
-  display: flex !important;
- }
+
  .media .mr-3{
   margin-right: 1rem !important;
  }
+
+ .media img{
+  width: 48px !important;
+  height: 48px !important;
+  padding: 2px;
+  border: 2px solid #f4f4f4;
+} 
+
  .media img{
   width: 1080px !important;
   height: 480px !important;
@@ -1548,26 +1511,35 @@
   flex: 1;
   padding: .4rem !important;
  }
+ 
  .media-body p{
   font-family: 'Abhaya Libre', serif;
   font-weight: 700 !important;
   font-size: 14px;
-  color: #88898a;
+  color: black;
  }
  .media-body small span{
   font-family: 'Abhaya Libre', serif;
   font-size: 14px;
-  color: #aaa;
+  color: #000;
  }
-  
+
  .cardbox {
+  border-radius: 20px;
+  background-color: #B9D6E0;
+  box-shadow: 0 5px 25px 0 rgba(123,123,123,.15);
+  margin-bottom: 20px;
+  padding: 0px !important;
+}
+
+ /* .cardbox {
   border-radius: 3px;
   background-color: #0fc19e
   box-shadow: 0 5px 25px 0 rgba(85, 85, 85, 0.15);
   margin-bottom: 20px;
   padding: 0px !important;
   border-radius: 20px;
- }
+ } */
   
  .cardbox .cardbox-item {
     position: relative;
@@ -1630,7 +1602,7 @@
   font-size: 14px;
   float: left;
   padding-top: 6px;
-  margin-right: 5px;
+  margin-right: 0px;
  }
  .cardbox-like li a:hover {
   text-decoration: none; 
@@ -1650,7 +1622,7 @@
     color: #b2b2b2;
     font-size: 14px;
     padding-top: 6px;
-    margin-right: 5px;
+    margin-right: px;
  }
   
   
@@ -1696,7 +1668,41 @@
   border-radius: 3px; 
  }
   
-  
+#title-bar {
+border-radius: 10px;
+background-color: rgba(192,192,192,0.3);
+width: 100%;
+}
+#description-bar {
+border-radius: 10px;
+background-color: rgba(192,192,192,0.3);
+width: 100%;
+}
+#date {
+  border-radius: 10px;
+  background-color: rgba(192,192,192,0.3);
+  width: 100%;
+  }
+
+#time {
+  border-radius: 10px;
+  background-color: rgba(192,192,192,0.3);
+  width: 100%;
+  }
+#quantity {
+  border-radius: 10px;
+  background-color: rgba(192,192,192,0.3);
+  width: 100%;
+  }
+
+.comment-area {
+  border-radius: 10px;
+  background-color: rgba(192,192,192,0.3);
+  width: 100%;
+}
+ .comment-form {
+   padding: 10px;
+ }
  .img-comment-list {
   list-style: none; 
   padding: 0px 10px 30px 0px;
@@ -1959,8 +1965,8 @@
  font-family: 'Abhaya Libre', serif; 
  color: #000000;
  font-size: 14px;
- font-weight: 700;
- margin-bottom: 4px;
+ font-weight: 500;
+ margin-bottom: 0px;
  }
  .suggestion-box .name-box span {
  font-family: 'Abhaya Libre', serif;
@@ -2053,7 +2059,7 @@
   border-radius: 4px;
  }
  .upload .card .card-header{
-  padding: 10px; 
+  padding: 0px; 
   border-left: 2px solid #d4d6d7;
   border-right: 2px solid #d4d6d7; 
   border-bottom: 2px solid #d4d6d7;
@@ -2380,7 +2386,8 @@
    Header Styles
    ========================================================================== */ 
  .login {
-  background: linear-gradient( rgba(34,34,34,0.7), rgba(34,34,34,0.7) ), url('../../img/bg/10.jpg') no-repeat center center fixed;
+  /* background: linear-gradient( rgba(34,34,34,0.7), rgba(34,34,34,0.7) ), url('../../img/bg/10.jpg') no-repeat center center fixed; */
+  background-color: #fff;
   background-size: cover;
   background-position: center center;
   -webkit-background-size: cover;
