--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,31 +23,31 @@
         <div class="d-flex justify-content-between">
             <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/"><em class="fa fa-home"></em>
-                    <h3>Home</h3>
+                    <h3 class="ui teal image header">Home</h3>
                 </a>
             </div>
             {{#if loggedIn}}
             <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/create-post"><em class="fa fa-plus"></em>
-                    <h3>Add an activity</h3>
+                   <h3 class="ui teal image header">Add an activity</h3>
                 </a>
             </div>
 
             <div class="p-2 nav-icon-lg">
                  <a class="nav-icon" href="/my-activities"><i class="fa fa-heart"></i>
-                    <h3>My activities</h3>
+                    <h3 class="ui teal image header">My activities</h3>
                 </a>
             </div>
             
             <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/logout"><i class="fa fa-minus"></i>
-                    <h3>Logout</h3>
+                    <h3 class="ui teal image header">Logout</h3>
                 </a>
             </div>
             {{else}}
             <div class="p-2 nav-icon-lg">
                 <a class="nav-icon" href="/login"><i class="fa fa-minus"></i>
-                    <h3>Login</h3>
+                    <h3 class="ui teal image header">Login</h3>
                 </a>
             </div>
             {{/if}}
