--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -9,7 +9,9 @@
 		      <input type="text" id="username-signup"type="text" class="form-control" placeholder="Username" />
 		   </div>
 		   <div class="form-group">
-          <label for="password-signup"><h3>Password:</h3></label>
+          <label for="password-signup">
+						<h3>Password:</h3>
+					</label>
 		      <input type="password" class="form-control" id="password-signup" placeholder="Password" />
 		   </div>
 		   <button class="kafe-btn mint-blue btn-block" type="submit"><h3> Sign up </h3></button>
