--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,8 +8,7 @@
                 <div class="media m-0">
                     <div class="media-body">
                         <div>
-                            <h3 class="ui teal image header">{{user_id}}</h3>
-                            </p>
+                            <h3 class="ui teal image header">{{dataValues.user.dataValues.id}}</h3>
                             <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
                             <h4 class="ui black image header">{{dataValues.description}}</h4><br>
                             <h4 class="ui teal image header">{{dataValues.date}}</h4><br>
@@ -24,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cardbox-like">
+            {{!-- <div class="cardbox-like">
                 <ul>
                     <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} likes 786,286</span></li>
                     <li><a href="#myModal" data-toggle="modal" title="" class="com">
@@ -33,8 +32,15 @@
                             </i></a>
                     </li>
                 </ul>
+            </div> --}}
+            <div class="comments">
+                <h1>Comments</h1>
+                <div>
+                    {{dataValues.comments}}
+                </div>
             </div>
-            <form class="comment-form">
+            {{!-- comment box --}}
+            <form class="comment-form" data-postId={{dataValues.id}}>
                 <div>
                     <textarea name="comment-body"></textarea>
                 </div>
@@ -156,5 +162,6 @@
     });
 </script>
 
+<script src="/javascript/comment.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
