homepage UI updated

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -36,6 +36,8 @@
                 </ul>
             </div> --}}
 
+
+        {{!-- comment form UI modified  --}}
         <br><form class="comment-form">
         <h4 class="ui teal image header"><label for="description">Comments</label></h4><br>
         <span class="span-last">{{> comments post.comments}}</span>
