--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -138,3 +138,18 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        $("#myBtn").click(function () {
+            $("#myModal").modal({ keyboard: true });
+        });
+        $("#myBtn2").click(function () {
+            $("#myModal2").modal({ keyboard: false });
+        });
+    });
+</script>
+
+<script src="/javascript/comment.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
