--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,11 +35,12 @@
             </div> --}}
             <div class="comments">
                 <h1>Comments</h1>
+                {{#each comments as |comment|}}
                 <div>
-                    {{dataValues.comments}}
+                    {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
                 </div>
+                {{/each}}
             </div>
-            {{!-- comment box --}}
             <form class="comment-form" data-postId={{dataValues.id}}>
                 <div>
                     <textarea name="comment-body"></textarea>
@@ -50,6 +51,7 @@
                     {{!-- <button type="button" class="upvote-btn">upvote</button> --}}
                 </div>
             </form>
+            {{!-- <button type="button" class="like-btn">like</button> --}}
         </div>
         {{/each}}
 
@@ -166,5 +168,6 @@
 </script>
 
 <script src="/javascript/comment.js"></script>
+{{!-- <script src="/javascript/likes.js"></script> --}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
