--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -8,8 +8,7 @@
                 <div class="media m-0">
                     <div class="media-body">
                         <div>
-                            <h3 class="ui teal image header">{{user_id}}</h3>
-                            </p>
+                            <h3 class="ui teal image header">{{dataValues.user.dataValues.id}}</h3>
                             <h3 class="ui teal image header">{{dataValues.title}}</h3><br>
                             <h4 class="ui black image header">{{dataValues.description}}</h4><br>
                             <h4 class="ui teal image header">{{dataValues.date}}</h4><br>
@@ -24,16 +23,34 @@
                     </div>
                 </div>
             </div>
-            <div class="cardbox-like">
+            {{!-- <div class="cardbox-like">
                 <ul>
                     <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} likes 786,286</span></li>
                     <li><a href="#myModal" data-toggle="modal" title="" class="com">
-                            <span class="span-last"> {{comments}} comments 130,15</span>
+                            <span class="span-last">{{> comments post.comments}}</span>
                             <i class="fa fa-comments">
                             </i></a>
                     </li>
                 </ul>
+            </div> --}}
+            <div class="comments">
+                <h1>Comments</h1>
+                {{#each comments as |comment|}}
+                <div>
+                    {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
+                </div>
+                {{/each}}
             </div>
+            <form class="comment-form" data-postId={{dataValues.id}}>
+                <div>
+                    <textarea name="comment-body"></textarea>
+                </div>
+
+                <div>
+                    <button type="submit">add comment</button>
+                    {{!-- <button type="button" class="upvote-btn">upvote</button> --}}
+                </div>
+            </form>
         </div>
         {{/each}}
 
