tried to edit post

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -33,6 +33,7 @@
                     </li>
                 </ul>
             </div> --}}
+            <a href="/edit/{{dataValues.id}}" class="edit-link">Edit activity</a>
             <div class="comments">
                 <h1>Comments</h1>
                 {{#each comments as |comment|}}
