--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,17 +23,8 @@
                     </div>
                 </div>
             </div>
-            {{!-- <div class="cardbox-like">
-                <ul>
-                    <li><a href="#"><i class="fa fa-heart"></i></a><span> {{likes}} likes 786,286</span></li>
-                    <li><a href="#myModal" data-toggle="modal" title="" class="com">
-                            <span class="span-last">{{> comments post.comments}}</span>
-                            <i class="fa fa-comments">
-                            </i></a>
-                    </li>
-                </ul>
-            </div> --}}
-            <a href="/edit/{{dataValues.id}}" class="edit-link">Edit activity</a>
+            {{!-- <a href="/edit/{{dataValues.id}}" class="edit-link">Edit activity</a> --}}
+            <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
             <div class="comments">
                 <h1>Comments</h1>
                 {{#each comments as |comment|}}
