tried to edit comments

--- a/views/edit-activity.handlebars
+++ b/views/edit-activity.handlebars
@@ -5,6 +5,7 @@
   </h2>
   <form class="edit-activity-form">
     <div>
+      <label for="post-title">Title</label>
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <button type="submit">Save activity</button>
